# vtraty-pes-bot

./: .env.sample  .gitignore  Dockerfile  README.md  config.ini.sample  default.nix  deploy.sh  docker-compose.yml  flake.nix  lock.x86_64-linux.json  login.sh  pyproject.toml  requirements.txt  run.sh
.claude/: CLAUDE.md
.github/: README.md
.github/workflows/: ci.yml
docs/: observability.md
src/: __main__.py  browser_manager.py  gsheets.py  llm.py  new_account.py  prompts.py
src/tmodules/: __init__.py  downloader.py  gatekeep.py  gk_donation_utils.py  instagram.py  mutelist.py  table.py  tiktok.py  twitter.py  watermark.py
src/vtraty_pes_bot/: __init__.py  __main__.py  gsheets.py  llm.py  new_account.py  prompts.py  template.py
src/vtraty_pes_bot/tmodules/: downloader.py  gatekeep.py  table.py  watermark.py
static/: template.html  template.py
