[project]
name = "vtraty-pes-bot"
version = "0.1.0"
description = "Vtraty utility bot"
authors = [
    {name = "kittyandrew",email = "alias.dev@kittymail.me"}
]
readme = ".github/README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "telethon-tgcrypto==0.0.3",
    "telethon==1.42.0",
    "aiofiles==25.1.0",
    "aiohttp>=3.13.3,<4.0.0",
    "yt-dlp>=2026.3.17,<2027.0.0",
    "bgutil-ytdlp-pot-provider==1.3.1",
    "ujson==5.12.0",
    "numpy>=1.26.0,<3.0.0",
    "opencv-python>=4.12.0.88,<5.0.0.0",
    "moviepy==2.2.1",
    "pytz==2026.1.post1",
    "cachetools==7.0.5",
    "langchain>=1.0.5,<2.0.0",
    "langchain-openai==1.1.14",
    "imgkit==1.2.3",
    "jinja2>=3.1.6,<4.0.0",
    "markupsafe>=2.0",
    "aiocache==0.12.3",
    "sentry-sdk>=2.54.0,<3.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
vtraty-pes-bot = "vtraty_pes_bot:main_cli"
